--- a/src/main/resources/templates/page/en/speakers.html
+++ b/src/main/resources/templates/page/en/speakers.html
@@ -86,18 +86,11 @@ var _hmt = _hmt || [];
 			<p>
 				All colleagues are welcomed to submit abstracts and make oral/poster presentations at ICABST2019! All oral presentations are to be delivered in English, and will be duration of 20-25 minutes. We will select qualified oral presentations after review. More qualified speakers will be announced soon after confirmation. To be a speaker of ICABST2019, please submit your abstract at an early date. </br>
 			</p>
-			</div>
-			<dl>
-			  <div class="fl col-4-4" style="display: table;">
-			    <img src="../img/speakers/maydongmeiwang.jpg" height="180" width="140" />
-			  </div>
-			  <dt>Prof. May Dongmei Wang</dt>
-			  <dd>Georgia Institute of Technology and Emory University, USA</dd>
-			  <dd><strong>Short Summary</strong>: Dr. May Dongmei Wang is a full professor in the Departments of Biomedical Eng., Electrical and Computer Eng., Computational Science and Eng. at Georgia Institute of Technology and Emory University. She earned BEng from Tsinghua University China, and MS/PhD from Georgia Institute of Technology. Her research is in Biomedical Big Data Analytics with a focus on Biomedical and Health Informatics (BHI) for predictive, personalized, and precision health (pHealth). In FDA-organized MAQC international consortium, she led the comprehensive RNA-Seq analytics pipeline investigation. She has served as an Emerging Area Editor for PNAS, Senior Editor for IEEE Journal of Biomedical and Health Informatics, an Associate Editor for TBME, a standing panelist for NIH BCHI, a panelist for NSF, and a reviewer for panels in multiple countries. Dr. Wang published over 200 peer-reviewed articles in referred journals and conference proceedings with google scholar citations over 9,900. </dd>
-			  <dd><strong>Presentation Title</strong>: Translating AI for Biomedicine and Healthcare: Challenges and Opportunities</dd>
-			<br/>
-			  <div class="clear"></div>
-			</dl>
+			<p>
+			* Please be aware that we will NOT contact speakers / participants in in authoritative way regarding their travel and accommodations. </br>
+			* Please keep in mind the authorities’ contact: icabst@apanse.com; Tel: +86 371 63226982.<br/><br/>
+			</p>
+			</div>			
 			<dl>
 			  <div class="fl col-4-4" style="display: table;">
 			    <img src="../img/speakers/hadishafiee.jpg" height="150" width="150" />
@@ -111,12 +104,58 @@ var _hmt = _hmt || [];
 			</dl>
 			<dl>
 			  <div class="fl col-4-4" style="display: table;">
+			    <img src="../img/speakers/emeritusgilnavon.jpg" height="150" width="150" />
+			  </div>
+			  <dt>Prof. Emeritus Gil Navon</dt>
+			  <dd>School of Chemistry, Tel-Aviv University, Israel</dd>
+			  <dd><strong>Short Summary</strong>: Prof. Emeritus Gil Navon focuses on Chemical and Biomedical Applications of NMR and MRI; Application of chemical exchange saturation transfer (CEST) MRI for imaging of tumors; NMR and MRI methods for the study of connective tissues (cartilage, tendon and intervertebral disc); Multinuclear spectroscopic MRI of nerves; New MRI pulse sequences for quantitation of myelin and of liver fibrosis. He has over 300 peer-review publications with the over 8000 citations</dd>
+			  <dd><strong>Presentation Title</strong>: Molecular Imaging of Breast Cancer by Chemical Exchange Saturation Transfer MRI of Glucose Analogs</dd>
+			<br/>
+			  <div class="clear"></div>
+			</dl>
+			<dl>
+			  <div class="fl col-4-4" style="display: table;">
 			    <img src="../img/speakers/pornpunvivithanaporn.jpg" height="170" width="140" />
 			  </div>
 			  <dt>Dr. Pornpun Vivithanaporn</dt>
-			  <dd>Associate Professor Dr. of Department of Pharmacology, Faculty of Science, Mahidol University, Thailand</dd>
+			  <dd>Associate Professor Dr. of Chakri Naruebodindra Medical Institute, Faculty of Medicine Ramathibodi Hospital, and Pharmacology graduate program, Faculty of Science, Mahidol University, Thailand</dd>
 			  <dd><strong>Short Summary</strong>: Dr. Pornpun Vivithanaporn focuses on the research of Neuroimmunology, Neurotoxicology, Neurovirology and Cancer pathogenesis. She got her Ph.D. (Pharmacology) in University of Texas Medical Branch, USA. And her current research is Glia cells: inflammation and cancers.</dd>
 			  <dd><strong>Presentation Title</strong>: The potential of leukotriene receptor antagonists as anticancer drugs</dd>
+			<br/>
+			  <div class="clear"></div>
+			</dl>
+			<dl>
+			  <div class="fl col-4-4" style="display: table;">
+			    <img src="../img/speakers/johannlechner.jpg" height="160" width="150" />
+			  </div>
+			  <dt>Dr. Johann Lechner</dt>
+			  <dd>Head of Clinic for Integrative Dentistry Munich, Germany</dd>
+			  <dd><strong>Short Summary</strong>: Dr. Lechner was trained at Dental University Munich, Germany. Since 1980 head of Clinic for Integrative Dentistry/Munich. Member of the executive board of the DAH (German Association for Research on Disturbance Fields and Regulation) and for 25 years chairman of science of GZM (International Society for Holistic Dentistry). He is the founder of ICOSIM (International College of Maxillo-Mandibular Osteoimmunology). Numerous lectures at international congresses, universities and medical organizations (i.e. Bern, Switzerland; Vienna, Austria; Washington DC, USA; Sao Paulo, Brazil; Beijing and Shanghai, China.)</dd>
+			  <dd><strong>Presentation Title</strong>: Chemokine RANTES/CCL5 from Jawbone Cavitations - Hidden Interface to Many Systemic-Immunological Diseases detactable by Radiation free Ultrasonography</dd>
+			<br/>
+			  <div class="clear"></div>
+			</dl>
+			<dl>
+			  <div class="fl col-4-4" style="display: table;">
+			    <img src="../img/speakers/taisunkim.jpg" height="160" width="130" />
+			  </div>
+			  <dt>Prof. Taisun Kim</dt>
+			  <dd>Department of Chemistry, Hallym University, Korea</dd>
+				<dd><strong>Short Summary</strong>: Prof. Taisun Kim got his Chemistry Ph.D. in University of Texas, Austin, United States. He was occupied the dean of the Department of Chemistry by 2013-2015. And now he is the CEO of Biometrix Technology Inc., Bioventure Plaza, Chuncheon, Korea. Currently his research focuses on Infectious disease, Cancer, and Dementia.</dd>
+			  <dd><strong>Presentation Title</strong>: 6 HCV Genotyping 9G testTM for highly accurate screening and genotyping of six HCV genotypes including HCV 1a, 1b, 2, 3, 4 and 6(6a, 6f, 6i and 6n)</dd>
+			<br/>
+			<br/>
+			<br/>
+			  <div class="clear"></div>
+			</dl>
+			<dl>
+			  <div class="fl col-4-4" style="display: table;">
+			    <img src="../img/speakers/takashijin.jpg" height="150" width="190" />
+			  </div>
+			  <dt>Dr. Takashi Jin</dt>
+			  <dd>Riken Center for Biosystems Dynamics Research, Japan</dd>
+			  <dd><strong>Short Summary</strong>: Dr. Takashi Jin is the team leader of Laboratory for Nano-Bio Probes in Riken Center for Biosystems Dynamics Research. His research team develops novel nano-bio probes for visualization of molecular and cellular dynamics in biological systems. They have synthesized a variety of nano-bio probes such as single-molecule imaging probes using quantum dots, cellular environment sensitive probes, and cellular state controllable probes using external magnetic fields.</dd>
+			  <dd><strong>Presentation Title</strong>: BRET-based dual-colour molecular imaging using a quantum dot and EGFP-luciferase conjugate</dd>
 			<br/>
 			  <div class="clear"></div>
 			</dl>
@@ -131,102 +170,31 @@ var _hmt = _hmt || [];
 			<br/>
 			  <div class="clear"></div>
 			</dl>
+			<dl>
+			  <div class="fl col-4-4" style="display: table;">
+			    <img src="../img/speakers/shioriminabe.jpg" height="170" width="130" />
+			  </div>
+			  <dt>Dr. Shiori MINABE</dt>
+			  <dd>Laboratory of Anatomy, Nippon Medical School, Japan</dd>
+			  <dd><strong>Short Summary</strong>: Dr. Shiori MINABE got the PHD in School of Bioagricultural Sciences, Nagoya University. She was Assistant Professor in Graduate School of Agricultural and Life Sciences, The University of Tokyo. Her current themes are Fetal programing of Neuroendocrine reproductive functions & Neuroendocrine mechanism of obesity-induced infertility.</dd>
+			  <dd><strong>Presentation Title</strong>: Neonatal exposure to estrogen causes irreversible infertility via specific suppressive action on hypothalamic Kiss1 neurons</dd>
+			<br/>
+			  <div class="clear"></div>
+			</dl>
       <dl>
         <div class="fl col-4-4" style="display: table;">
-          <img src="../img/speakers/salimalalani.jpg" height="150" width="140" />
+          <img src="../img/speakers/imeldarey.jpg" height="160" width="130" />
         </div>
-        <dt>Salima Lalani</dt>
-        <dd>Department of Biological Sciences, Sunway University, Malaysia</dd>
-		    <dd><strong>Presentation Title</strong>: Antiviral activity of silymarin and baicalein against EV-A71 in cell cultures</dd>
+        <dt>Dr. Imelda Rey</dt>
+        <dd>Gastroentero-Hepatology Division, Internal Medicine Department, Universitas Sumatera Utara, Adam Malik General Hospital</dd>
+				<dd><strong>Short Summary</strong>: Dr. Imelda Rey is a staff/lecturer in Internal Medicine Department, Medical Faculty, Universitas Sumatera Utara, as well as the Ministry of Reseach, Technology and Higher Education of The Republic of Indonesia. And she works as a stuff in Adam Malik General Hospital (Indonesia) and internist at Internal Medicine Department, Gastroentero-Hepatology division.</dd>
+		    <dd><strong>Presentation Title</strong>: Association of Serum Tumor Necrosis Factor-α with the Severity of Liver Cirrhosis</dd>
 			<br/>
 			<br/>
 			<br/>
 			  <div class="clear"></div>
       </dl>
-      <dl>
-        <div class="fl col-4-4" style="display: table;">
-          <img src="../img/speakers/ikuoyamamoto.jpg" height="150" width="140" />
-        </div>
-        <dt>Dr. Ikuo Yamamoto</dt>
-        <dd>Professor, Organization for Marine Science and Technology, Nagasaki University, Japan</dd>
-        <dd><strong>Short Summary</strong>: Dr. Ikuo Yamamoto is Vice President and Professor of Nagasaki University in Japan. His areas of work include the development of Autonomous Underwater Vehicle (Leader of AUV “Urashima”, which established the world record autonomous cruising in February 2005), Remotely Operated Vehicle (Champion in underwater vehicle competition of Techno ocean world convention in 2012 and Okinawa offshore robotics contest in 2014,2015,2016; “Kaiko”, 10000m deep cruising in 1995), Robotic fish (the first life-like sea bream robotic fish was created in 1995, followed by dolphin, shark ray ,coelacanth, carp, etc.).</dd>
-		  <br/>
-			  <div class="clear"></div>
-      </dl>
-      <dl>
-        <div class="fl col-4-4" style="display: table;">
-          <img src="../img/speakers/konstantinbloch.jpg" height="150" width="140" />
-        </div>
-        <dt>Dr. Konstantin Bloch</dt>
-        <dd>Associate Professor, Sackler Faculty of Medicine, Tel Aviv University, Israel</dd>
-        <dd><strong>Short Summary</strong>: Konstantin Bloch, PhD is head of research team at the Felsenstein Medical Research Center and associate professor at the Sackler Faculty of Medicine, Tel-Aviv University, Israel. Dr. Bloch is an expert in the field of pancreatic islet transplantation. He is the scientific co-founder of the Beta-O2 Technologies, a biomedical company developing a highly oxygenated implantable bio-artificial pancreas for treatment of type 1 diabetes (currently in Phase I/II). Recently, his team developed a proprietary technology of bioengineered insulin delivery to the brain for treatment of Alzheimer's disease. </dd>
-		  <br/>
-			  <div class="clear"></div>
-      </dl>
-      <dl>
-        <div class="fl col-4-4" style="display: table;">
-          <img src="../img/speakers/vasilisntziachristos.jpg" height="170" width="140" />
-        </div>
-        <dt>Prof. Vasilis Ntziachristos</dt>
-        <dd>Biological Imaging (CBI) at the Technical University of Munich</dd>
-        <dd><strong>Short Summary</strong>: Vasilis Ntziachristos Ph.D. is Professor of Medicine, Professor of Electrical Engineering and Director of the Chair for Biological Imaging (CBI) at the Technical University of Munich, Director of the Institute for Biological and Medical Imaging (IBMI) at the Helmholtz Zentrum Munchen and Director of Bioengineering at the Helmholtz Pioneer Campus. Professor Ntziachristos is the Editor of the journal Photoacoustics, regularly Chairs in international meetings and councils and has received numerous awards and distinctions, including the Chaire Blaise Pascal (2019), the Gold Medal from the Society for Molecular Imaging (2015), the Gottfried Leibnitz prize from the German Research Foundation (2013), the Erwin Schrödinger Award (2012) and was named one of the world’s top innovators by the Massachusetts Institute of Technology (MIT) Technology Review in 2004.</dd>
-		  <br/>
-			  <div class="clear"></div>
-      </dl>
-      <!--dl>
-        <div class="fl col-4-4" style="display: table;">
-          <img src="/d/file/p/2019/02-26/d22d7755618a85b0833749278fb9998e.png"/>
-        </div>
-        <dt>林海翔</dt>
-        <dd>荷兰Delft理工大学教授，浙江理工大学“金沙学者讲座教授”</dd>
-        <dd><strong>研究领域：</strong>高性能计算、并行分布算法、大规模复杂系统建模与仿真。</dd>
-        <dd>
-          1979年考入清华大学，1979年赴荷兰代尔夫特理工大学留学，在荷兰代尔夫特理工大学分别获得学士、硕士和博士学位。林海翔教授是并行分布计算与数据建模仿真领域知名学者。他承担了欧洲、荷兰10多项科研项目，发表研究论文100多篇。担任多个国际学术期刊编委、学术会议程序委员会主席/副主席，曾担任全欧华人专业协会联合会主席、荷兰华人学者工程师协会主席，曾获荷兰女皇勋章；担任中国科学院大学、山东大学、广西大学访问（客座）教授。<br/>&nbsp;
-        </dd>
-        <div class="clear"></div>
-      </dl>
-      <dl>
-        <div class="fl col-4-4" style="display: table;">
-          <img src="/d/file/p/2019/02-26/9ad39d0a4954bf7765a0e6b90685c633.png"/>
-        </div>
-        <dt>吴少凡</dt>
-        <dd>中国科学院海西研究院研究员，博士生导师</dd>
-        <dd><strong>研究领域：</strong>激光与非线性光学晶体、闪烁晶体与闪烁陶瓷等新型功能材料。</dd>
-        <dd>
-          1998年获厦门大学材料化学学士学位，2003年获中科院福建物构所凝聚态物理硕士学位，2006年获中科院福建物构所物理化学博士学位。作为第一完成人，获得福建省科技进步奖二等奖（2004年度）、石油和化学化工协会科技进步奖一等奖（2005年度）；作为第三完成人，获国家科技进步奖二等奖（2011年度）、福建省科技进步奖一等奖2项（2007、2000年度）；获福建青年科技奖（2005年度）、福建运盛青年科技奖（2005年度）和中国石化协会青年科技突出贡献奖称号（2009年度），2011年度获得福州市杰出科技人员称号。
-          <p>&nbsp;</p>
-          <p>&nbsp;</p></dd>
-        <div class="clear"></div>
-      </dl>
-      <dl>
-        <div class="fl col-4-4" style="display: table;">
-          <img src="/d/file/p/2019/05-10/04b1cb499b6f0a46e283d50f77a76266.jpg"/>
-        </div>
-        <dt>徐军华</dt>
-        <dd>新加坡南洋理工大学（NTU）-法国原子能委员会(CEA)联合实验室研究员</dd>
-        <dd><strong>研究领域：</strong>废旧智能制造产品的回收和利用。</dd>
-        <dd>
-          2013年12月获得欧盟玛丽居里博士奖学金，2018年获得芬兰赫尔辛基大学博士学位，2018年9月到2019年3月，在赫尔辛基大学开展博士后研究，2019年3月至今新加坡南洋理工大学研究员。目前已经发表学术论文10余篇，其中6篇影响因子大于5，申请并授权发明专利三项，科研成果曾被赫尔辛基大学新闻和中央电视台专题报道。曾参加第九届国际核化学赫尔辛基会议，2016国际离子交换剑桥大学会议等，并担任2018年第十届欧洲论坛担任大会主席。此外，受邀多个国际期刊审稿人，包括Chemical
-          Engineering Journal，materials以及Nuclear Science and Techniques等。
-        </dd>
-        <div class="clear"></div>
-      </dl>
-      <dl>
-        <div class="fl col-4-4" style="display: table;">
-          <img src="/d/file/p/2019/05-24/7803b98a9f23a876d43f59d2f725ebef.jpg"/>
-        </div>
-        <dt>李俊</dt>
-        <dd>中国科学院海西研究院研究员，福建省机器人智能控制工程技术研究中心主任</dd>
-        <dd><strong>研究领域：</strong>自适应控制、认知系统建模、人机交互、神经网络、机器人控制技术等。</dd>
-        <dd>
-          2009年在德国维尔茨堡大学获信息及计算机科学硕士学位，2012年在慕尼黑大学（LMU）机器人人工智能实验室（COTESYS）获得博士学位，同年开始在德国马尔堡大学从事博士后研究，之后留校任职并从事相关研究。留德期间先后承担和参与了多项德国（DFG）及欧盟范围内多项企业相关研发项目，归国后入选福建省第五批百人计划、中科院海西研究院引进优秀海外高层次人才、泉州市引进高层次创新百人、晋江市优秀人才，主持国家十三五重点研发计划子课题、福建省科技重大专项及多项企业委托项目，参与国家科技支撑计划、多项省市各级政府重点科技计划、中科院先导计划A类及STS计划等多个项目。发表专著2部，专业论文16篇，申请及授权专利36件（PCT国际专利1件），软件著作权3项。
-        </dd>
-        <div class="clear"></div>
-      </dl-->
-			<p>
-			* Please be aware that we will NOT contact speakers / participants in in authoritative way regarding their travel and accommodations. </br>
-			* Please keep in mind the authorities’ contact: icabst@apanse.com; Tel: +86 371 63226982.<br/><br/>
-			</p>
+
     <div class="background4" style="padding-left:55px; padding-bottom: 10px;">Previous APANSE Speakers (From other APANSE Conferences)</div>
 		<dl>
 		  <div class="fl col-4-4" style="display: table;">
