--- a/src/main/resources/templates/page/en/index.html
+++ b/src/main/resources/templates/page/en/index.html
@@ -134,6 +134,7 @@ var _hmt = _hmt || [];
 					<li><a href="/program" target="_blank" style="color: #102cf7"><u>Primary Conference Program has been issued</u></a></li>
           <li><a href="/about" target="_blank" style="color: #102cf7"><u>ICABST2019 will be divided to 7 Sessions</u></a></li>
 					<li><a href="/venue" target="_blank" style="color: #102cf7"><u>For visa, venue and accommodations, please click "Venue" for details</u></a></li>
+					<li><a href="http://pharmacology.sc.mahidol.ac.th/december-26-28-2019-international-conference-on-advances-in-biological-science-and-technology/" target="_blank" style="color: #102cf7"><u>ICABST2019 announcement released by Mahidol University</u></a></li>
         </ul>
         <div class="clear"></div>
       </div>
@@ -199,6 +200,7 @@ var _hmt = _hmt || [];
     <ul>
       <li><img src="../img/1--APANSE.png"/></li>
 			<li><img src="../img/MaejoUniversityLogo.png"/></li>
+			<li><a href="http://pharmacology.sc.mahidol.ac.th/december-26-28-2019-international-conference-on-advances-in-biological-science-and-technology/" target="_blank"><img src="../img/mahidoluniversity.jpg"/></li>
       <li><a href="https://www.nature.com/natureevents/science/events/91255-International_Conference_on_Advances_in_Biological_Science_and_Technology" target="_blank"><img src="../img/2--nature-events.png"/></li>
       <!--li><img src="../img/3--cnki-logo.gif"/></li>
       <li><img src="../img/4--sciencemeeting-logo.jpg"/></li-->
