--- a/src/main/resources/templates/page/en/organizer.html
+++ b/src/main/resources/templates/page/en/organizer.html
@@ -119,6 +119,7 @@ var _hmt = _hmt || [];
 					Jason Guowei Sun, Asia-Pacific Association of Natural Science and Engeineering, China <br/>
 					Khalid Rehman Hakeem, Universiti Putra, Malaysia <br/>
 					KIKUCHI Masumi, University of Tokyo, Japan <br/>
+					Muhammad Asad Ali, University of Veterinary and Animal Sciences, Pakistan <br/>
 					Nagendra Kumar Kaushik, Kwangwoon University, Korea <br/>
 					Pornpun Vivithanaporn, Mahidol University, Thailand <br/>
 					Suhaimi Suratman, Institute of Oceanography and Environment, Malaysia <br/>
@@ -139,6 +140,7 @@ var _hmt = _hmt || [];
 					Le Nguyen Quoc Khanh, Nanyang Technological University, Singapore <br/>
 					Leyser Rodrigues Oliveira University Centre of Formiga, Brazil <br/>
 					Midhat Nabil Ahmad Salimi, Universiti Malaysia Perlis (UniMAP), Malaysia <br/>
+					Mohsen Hamzeh, Amirkabir University of Technology, Iran
 					Pajaree Thongsanit, Naresuan University, Thailand <br/>
 					Palanisamy Sivanandy, International Medical University(IMU), Malaysia <br/>
 					Reshma Rani, Amity University, India <br/>
@@ -152,6 +154,7 @@ var _hmt = _hmt || [];
       <ul>
         <li><img src="../img/1--APANSE.png"/></li>
 				<li><img src="../img/MaejoUniversityLogo.png"/></li>
+				<li><a href="http://pharmacology.sc.mahidol.ac.th/december-26-28-2019-international-conference-on-advances-in-biological-science-and-technology/" target="_blank"><img src="../img/mahidoluniversity.jpg"/></li>
         <li><a href="https://www.nature.com/natureevents/science/events/91255-International_Conference_on_Advances_in_Biological_Science_and_Technology" target="_blank"><img src="../img/2--nature-events.png"/></li>
         <!--li><img src="../img/3--cnki-logo.gif"/></li>
         <li><img src="../img/4--sciencemeeting-logo.jpg"/></li-->
