--- a/src/main/resources/templates/page/en/registration.html
+++ b/src/main/resources/templates/page/en/registration.html
@@ -139,7 +139,9 @@ var _hmt = _hmt || [];
         </table>
       </div>
       <div class="public_p pb-20 pl-30">
-        <p><strong>Notes</strong></p>
+       <p>*As cater to the policy of Thailand Higher Education Commission and to provide an estensive platform for local scholars/colleagues, the conference registration fee is 6500THB for the participants from Thailand.</p>
+				
+				<p><strong>Notes</strong></p>
         <p>1. To facilitate processing, participants should clearly quote the invoice number in the remittance receipt so that our Finance team can identify the payment easily, e.g."ICABST0001". </p>
 				<p>2. After payment, please send the copy of remittance receipt to conference secretary by icabst@apanse.com</p>
         <p>3. We provide three payment methods: (1)PayPal/Credit Card online (2)Bank transfer/Wire transfer and (3)Cash on-site.</p>
