--- a/src/main/resources/templates/page/cn/cfp.html
+++ b/src/main/resources/templates/page/cn/cfp.html
@@ -14,9 +14,9 @@ var _hmt = _hmt || [];
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" />  
-  <title>ICABST征文页面|大会征文--2019国际前沿生物科学与技术国际会议(ICABST2019),泰国生物会议</title>
+  <title>ICABST征文页面|大会征文--2019国际前沿生物科学与技术学术会议(ICABST2019),泰国生物会议</title>
   <meta name="keywords" content="ICABST,ICABST2019,biotechnology,biomaterial,biomedical,大会征文,生物会议,曼谷,泰国,国际,会议,生物技术,生物工程,学术会议,SCI正刊,SCI摘要,EI会议,CPCI,ISTP" />
-  <meta name="description" content="ICABST,2019国际前沿生物科学与技术国际会议将在12月底于曼谷召开,会议可安排SCI/EI期刊论文发表" />
+  <meta name="description" content="ICABST,2019国际前沿生物科学与技术学术会议将在12月底于曼谷召开,会议可安排SCI/EI期刊论文发表" />
   <meta name="robots" content="index,follow" />
   <meta http-equiv="x-dns-prefetch-control" content="on">
 	<link rel="icon" href="../img/icon.png" type="image/x-icon">
@@ -47,7 +47,7 @@ var _hmt = _hmt || [];
           </div>
           <div style="width:60%;height:200px; float:left;display:inline-block;">
             <p class="banner_p" style="font-family:'Times New Roman'; line-height: 50px" align="right">
-              2019国际前沿生物科学与技术国际会议<br/>(ICABST2019)<br/>
+              2019国际前沿生物科学与技术学术会议<br/>(ICABST2019)<br/>
               <i>泰国(曼谷)----2019年12月26日-28日</i>
             </p>
           </div>
@@ -82,11 +82,11 @@ var _hmt = _hmt || [];
       <div class="public_p pb-20">
         <article class="row-txt">
           <p style="text-align: center; font-size: 22px">
-            <strong>2019国际前沿生物科学与技术国际会议</br>SCI、EI、ISTP（CPCI-S）征文通知
+            <strong>2019国际前沿生物科学与技术学术会议</br>SCI、EI、ISTP（CPCI-S）征文通知
             </strong>
           </p>
           <div class="mb-10">
-            <p>&nbsp;&nbsp;&nbsp;&nbsp;2019国际前沿生物科学与技术国际会议（ICABST2019）在会议筹备期间，多个出版方提供版面支持，经由我方审核通过的论文，均可安排至相应期刊发表。现面向国内外学者征收相关领域论文，<strong>如您有意向发表SCI、EI期刊论文（非会议论文，正刊版面）及EI、ISTP（CPCI-S）检索的会议论文，</strong>请尽早完成初稿的提交。
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;2019国际前沿生物科学与技术学术会议（ICABST2019）在会议筹备期间，多个出版方提供版面支持，经由我方审核通过的论文，均可安排至相应期刊发表。现面向国内外学者征收相关领域论文，<strong>如您有意向发表SCI、EI期刊论文（非会议论文，正刊版面）及EI、ISTP（CPCI-S）检索的会议论文，</strong>请尽早完成初稿的提交。
             </p>
 						<p>
 						<a href="/cn/sci1" target="_blank" style="color: #102cf7"><u>SCI正刊征文1----生物、材料、分子生物相关领域</u></a><br/>
