--- a/src/main/resources/templates/page/cn/organization.html
+++ b/src/main/resources/templates/page/cn/organization.html
@@ -14,9 +14,9 @@ var _hmt = _hmt || [];
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" />  
-  <title>ICABST组织单位|组织机构--2019国际前沿生物科学与技术国际会议(ICABST2019),泰国生物会议</title>
+  <title>ICABST组织单位|组织机构--2019国际前沿生物科学与技术学术会议(ICABST2019),泰国生物会议</title>
   <meta name="keywords" content="ICABST,主办单位,组织机构,ICABST2019,biotechnology,biomaterial,biomedical,生物会议,曼谷,泰国,国际,会议,生物技术,生物工程,学术会议,SCI正刊,SCI摘要,EI会议,CPCI,ISTP" />
-  <meta name="description" content="ICABST,2019国际前沿生物科学与技术国际会议将在12月底于曼谷召开,会议可安排SCI/EI期刊论文发表" />
+  <meta name="description" content="ICABST,2019国际前沿生物科学与技术学术会议将在12月底于曼谷召开,会议可安排SCI/EI期刊论文发表" />
   <meta name="robots" content="index,follow" />
   <meta http-equiv="x-dns-prefetch-control" content="on">
 	<link rel="icon" href="../img/icon.png" type="image/x-icon">
@@ -47,7 +47,7 @@ var _hmt = _hmt || [];
           </div>
           <div style="width:60%;height:200px; float:left;display:inline-block;">
             <p class="banner_p" style="font-family:'Times New Roman'; line-height: 50px" align="right">
-              2019国际前沿生物科学与技术国际会议<br/>(ICABST2019)<br/>
+              2019国际前沿生物科学与技术学术会议<br/>(ICABST2019)<br/>
               <i>泰国(曼谷)----2019年12月26日-28日</i>
             </p>
           </div>
@@ -119,6 +119,7 @@ var _hmt = _hmt || [];
 					Jason Guowei Sun, Asia-Pacific Association of Natural Science and Engeineering, China <br/>
 					Khalid Rehman Hakeem, Universiti Putra, Malaysia <br/>
 					KIKUCHI Masumi, University of Tokyo, Japan <br/>
+					Muhammad Asad Ali, University of Veterinary and Animal Sciences, Pakistan <br/>
 					Nagendra Kumar Kaushik, Kwangwoon University, Korea <br/>
 					Pornpun Vivithanaporn, Mahidol University, Thailand <br/>
 					Suhaimi Suratman, Institute of Oceanography and Environment, Malaysia <br/>
@@ -139,6 +140,7 @@ var _hmt = _hmt || [];
 					Le Nguyen Quoc Khanh, Nanyang Technological University, Singapore <br/>
 					Leyser Rodrigues Oliveira University Centre of Formiga, Brazil <br/>
 					Midhat Nabil Ahmad Salimi, Universiti Malaysia Perlis (UniMAP), Malaysia <br/>
+					Mohsen Hamzeh, Amirkabir University of Technology, Iran
 					Pajaree Thongsanit, Naresuan University, Thailand <br/>
 					Palanisamy Sivanandy, International Medical University(IMU), Malaysia <br/>
 					Reshma Rani, Amity University, India <br/>
@@ -152,6 +154,7 @@ var _hmt = _hmt || [];
       <ul>
         <li><img src="../img/1--APANSE.png"/></li>
 				<li><img src="../img/MaejoUniversityLogo.png"/></li>
+				<li><a href="http://pharmacology.sc.mahidol.ac.th/december-26-28-2019-international-conference-on-advances-in-biological-science-and-technology/" target="_blank"><img src="../img/mahidoluniversity.jpg"/></li>
         <li><a href="https://www.nature.com/natureevents/science/events/91255-International_Conference_on_Advances_in_Biological_Science_and_Technology" target="_blank"><img src="../img/2--nature-events.png"/></li>
         <!--li><img src="../img/3--cnki-logo.gif"/></li>
         <li><img src="../img/4--sciencemeeting-logo.jpg"/></li-->
