--- a/src/main/resources/templates/page/cn/sciabstract.html
+++ b/src/main/resources/templates/page/cn/sciabstract.html
@@ -14,9 +14,9 @@ var _hmt = _hmt || [];
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" />  
-  <title>SCI摘要专题|大会征文--2019国际前沿生物科学与技术国际会议(ICABST2019),泰国生物会议</title>
+  <title>SCI摘要专题|大会征文--2019国际前沿生物科学与技术学术会议(ICABST2019),泰国生物会议</title>
   <meta name="keywords" content="ICABST,ICABST2019,biotechnology,biomaterial,biomedical,大会征文,生物会议,曼谷,泰国,国际,会议,生物技术,生物工程,学术会议,SCI正刊,SCI摘要,EI会议,CPCI,ISTP" />
-  <meta name="description" content="ICABST,2019国际前沿生物科学与技术国际会议将在12月底于曼谷召开,会议可安排SCI/EI期刊论文发表" />
+  <meta name="description" content="ICABST,2019国际前沿生物科学与技术学术会议将在12月底于曼谷召开,会议可安排SCI/EI期刊论文发表" />
   <meta name="robots" content="index,follow" />
   <meta http-equiv="x-dns-prefetch-control" content="on">
 	<link rel="icon" href="../img/icon.png" type="image/x-icon">
@@ -47,7 +47,7 @@ var _hmt = _hmt || [];
           </div>
           <div style="width:60%;height:200px; float:left;display:inline-block;">
             <p class="banner_p" style="font-family:'Times New Roman'; line-height: 50px" align="right">
-              2019国际前沿生物科学与技术国际会议<br/>(ICABST2019)<br/>
+              2019国际前沿生物科学与技术学术会议<br/>(ICABST2019)<br/>
               <i>泰国(曼谷)----2019年12月26日-28日</i>
             </p>
           </div>
