--- a/src/main/resources/templates/page/cn/about.html
+++ b/src/main/resources/templates/page/cn/about.html
@@ -14,9 +14,9 @@ var _hmt = _hmt || [];
   <meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" />
-  <title>关于ICABST|大会详情--2019国际前沿生物科学与技术国际会议(ICABST2019),泰国生物会议</title>
+  <title>关于ICABST|大会详情--2019国际前沿生物科学与技术学术会议(ICABST2019),泰国生物会议</title>
 	<meta name="keywords" content="ICABST,ICABST2019,biotechnology,biomaterial,biomedical,生物会议,曼谷,泰国,国际,会议,生物技术,生物工程,学术会议,SCI正刊,SCI摘要,EI会议,CPCI,ISTP" />
-  <meta name="description" content="ICABST,2019国际前沿生物科学与技术国际会议将在12月底于曼谷召开,会议可安排SCI/EI期刊论文发表" />
+  <meta name="description" content="ICABST,2019国际前沿生物科学与技术学术会议将在12月底于曼谷召开,会议可安排SCI/EI期刊论文发表" />
 	<meta name="robots" content="index,follow" />
 	<meta http-equiv="x-dns-prefetch-control" content="on">
 	<link rel="icon" href="../img/icon.png" type="image/x-icon">
@@ -47,7 +47,7 @@ var _hmt = _hmt || [];
           </div>
           <div style="width:60%;height:200px; float:left;display:inline-block;">
             <p class="banner_p" style="font-family:'Times New Roman'; line-height: 50px" align="right">
-              2019国际前沿生物科学与技术国际会议<br/>(ICABST2019)<br/>
+              2019国际前沿生物科学与技术学术会议<br/>(ICABST2019)<br/>
               <i>泰国(曼谷)----2019年12月26日-28日</i>
             </p>
           </div>
@@ -82,10 +82,10 @@ var _hmt = _hmt || [];
         <div class="background4" style="padding-left:55px; padding-bottom: 10px;">大会详情</div>
         <div class="public_p pb-20 pl-30">
           <p style="text-align: center;">
-            <strong>2019国际前沿生物科学与技术国际会议（ICABST2019）会议通知</strong>
+            <strong>2019国际前沿生物科学与技术学术会议（ICABST2019）会议通知</strong>
           </p>
           <p>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2019国际前沿生物科学与技术国际会议（ICABST2019）将于2019年12月26日-28日在泰国曼谷召开。会议由亚太自然科学与工程协会与泰国梅州大学(Maejo University)主办。
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2019国际前沿生物科学与技术学术会议（ICABST2019）将于2019年12月26日-28日在泰国曼谷召开。会议由亚太自然科学与工程协会与泰国梅州大学(Maejo University)主办。
           </p>
           <p>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;大会旨在促进生物科学技术的发展，并为分子生物学、生物医学与制药、生物力学与工程、生物及分子材料、生物化学、农业食品科学、
