--- a/src/main/resources/templates/page/cn/cpci.html
+++ b/src/main/resources/templates/page/cn/cpci.html
@@ -14,9 +14,9 @@ var _hmt = _hmt || [];
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" />  
-  <title>EI/CPCI会议论文发表|大会征文--2019国际前沿生物科学与技术国际会议(ICABST2019),泰国生物会议</title>
+  <title>EI/CPCI会议论文发表|大会征文--2019国际前沿生物科学与技术学术会议(ICABST2019),泰国生物会议</title>
   <meta name="keywords" content="ICABST,ICABST2019,biotechnology,biomaterial,biomedical,大会征文,生物会议,曼谷,泰国,国际,会议,生物技术,生物工程,学术会议,SCI正刊,SCI摘要,EI会议,CPCI,ISTP" />
-  <meta name="description" content="ICABST,2019国际前沿生物科学与技术国际会议将在12月底于曼谷召开,会议可安排SCI/EI期刊论文发表" />
+  <meta name="description" content="ICABST,2019国际前沿生物科学与技术学术会议将在12月底于曼谷召开,会议可安排SCI/EI期刊论文发表" />
   <meta name="robots" content="index,follow" />
   <meta http-equiv="x-dns-prefetch-control" content="on">
 	<link rel="icon" href="../img/icon.png" type="image/x-icon">
@@ -47,7 +47,7 @@ var _hmt = _hmt || [];
           </div>
           <div style="width:60%;height:200px; float:left;display:inline-block;">
             <p class="banner_p" style="font-family:'Times New Roman'; line-height: 50px" align="right">
-              2019国际前沿生物科学与技术国际会议<br/>(ICABST2019)<br/>
+              2019国际前沿生物科学与技术学术会议<br/>(ICABST2019)<br/>
               <i>泰国(曼谷)----2019年12月26日-28日</i>
             </p>
           </div>
@@ -86,7 +86,7 @@ var _hmt = _hmt || [];
           </p>
           <div class="mb-10">
             <p>
-							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2019国际前沿生物科学与技术国际会议将于2019年12月26日-28日在泰国曼谷召开。本届会议由亚太自然科学与工程协会、梅州大学（Maejo University）联合主办召开，
+							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2019国际前沿生物科学与技术学术会议将于2019年12月26日-28日在泰国曼谷召开。本届会议由亚太自然科学与工程协会、梅州大学（Maejo University）联合主办召开，
 							并由玛希隆大学（Mahidol University），清迈大学（Chiang Mai University）提供协办支持。同时大会被Nature Events （www.nature.com）、ACS、MEMBS、BrownWalker Press、IOP Publishing、
 							丁香会议、科学网等多个学术平台收录并发布。在举办学术会议的同时，联合国际知名出版社进行会议及期刊论文的征文和发表活动，历年来已成功帮助国内众多学者完成论文的发表和检索工作。<br/>
 							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;意向发表会议论文的文章，会由大会学术委员会进行评审，接收的论文将安排送交出版（含ISSN，DOI），并提交EI-Compendex（EI检索）及CPCI-S（ISTP检索）数据库收录。
