--- a/src/main/resources/templates/page/en/speakers.html
+++ b/src/main/resources/templates/page/en/speakers.html
@@ -144,9 +144,7 @@ var _hmt = _hmt || [];
 				<dd><strong>Short Summary</strong>: Prof. Taisun Kim got his Chemistry Ph.D. in University of Texas, Austin, United States. He was occupied the dean of the Department of Chemistry by 2013-2015. And now he is the CEO of Biometrix Technology Inc., Bioventure Plaza, Chuncheon, Korea. Currently his research focuses on Infectious disease, Cancer, and Dementia.</dd>
 			  <dd><strong>Presentation Title</strong>: 6 HCV Genotyping 9G testTM for highly accurate screening and genotyping of six HCV genotypes including HCV 1a, 1b, 2, 3, 4 and 6(6a, 6f, 6i and 6n)</dd>
 			<br/>
-			<br/>
-			<br/>
-			  <div class="clear"></div>
+				<div class="clear"></div>
 			</dl>
 			<dl>
 			  <div class="fl col-4-4" style="display: table;">
@@ -186,14 +184,24 @@ var _hmt = _hmt || [];
           <img src="../img/speakers/imeldarey.jpg" height="160" width="130" />
         </div>
         <dt>Dr. Imelda Rey</dt>
-        <dd>Gastroentero-Hepatology Division, Internal Medicine Department, Universitas Sumatera Utara, Adam Malik General Hospital</dd>
+        <dd>Gastroentero-Hepatology Division, Internal Medicine Department, Universitas Sumatera Utara, Adam Malik General Hospital, Indonesia</dd>
 				<dd><strong>Short Summary</strong>: Dr. Imelda Rey is a staff/lecturer in Internal Medicine Department, Medical Faculty, Universitas Sumatera Utara, as well as the Ministry of Reseach, Technology and Higher Education of The Republic of Indonesia. And she works as a stuff in Adam Malik General Hospital (Indonesia) and internist at Internal Medicine Department, Gastroentero-Hepatology division.</dd>
-		    <dd><strong>Presentation Title</strong>: Association of Serum Tumor Necrosis Factor-α with the Severity of Liver Cirrhosis</dd>
+				<dd><strong>Presentation Title</strong>: Association of Serum Tumor Necrosis Factor-α with the Severity of Liver Cirrhosis</dd>
 			<br/>
-			<br/>
-			<br/>
-			  <div class="clear"></div>
+				  <div class="clear"></div>
       </dl>
+      <dl>
+        <div class="fl col-4-4" style="display: table;">
+          <img src="../img/speakers/sulaimanngongudepamede.jpg" height="150" width="150" />
+        </div>
+        <dt>Prof. Sulaiman Ngongu Depamede</dt>
+        <dd>Mataram University, Indonesia</dd>
+				<dd><strong>Short Summary</strong>: Sulaiman Ngongu Depamede has completed his PhD from The University of Adelaide, South Australia. Besides being a Lecturer at the Faculty of Animal Science of Mataram University, he is also a Chairman of Immunobiology Laboratory, Mataram University (2005-2015); he now serves as Secretary of the Consortium for Research Large ruminants. His research in the last five years focused on the proteomics of Bali cattle (Bos javanicus) saliva. He has published his research papers in reputed journals.</dd>
+				<dd><strong>Presentation Title</strong>: Development of lateral flow assay for detecting Hepatitis B surface Antigen (HBsAg) based on nucleotide hybridization techniques</dd>
+			<br/>
+			<br/>
+				  <div class="clear"></div>
+      </dl>	  
 
     <div class="background4" style="padding-left:55px; padding-bottom: 10px;">Previous APANSE Speakers (From other APANSE Conferences)</div>
 		<dl>
