--- a/src/main/resources/templates/page/en/submit.html
+++ b/src/main/resources/templates/page/en/submit.html
@@ -296,6 +296,7 @@ var _hmt = _hmt || [];
 									<option value="Student-Late">Student-Late-470USD (After Oct. 31)</option>
 									<option value="Company-Regular">Company-Standard-600USD (Befor Oct. 31)</option>
 									<option value="Company-Late">Compmany-Late-700USD (After Oct. 31)</option>
+									<option value="Thailand-Cash">Thailand Affiliation 6500THB (Cash On-site)</option>
                                     </option>
                                 </select>
                             </div>
